# mastering_ros_robot_description_pkg

./: CMakeLists.txt  README.md  package.xml
include/mastering_ros_robot_description_pkg/: jointControl.hpp
launch/: view_pan_tilt_urdf.launch.py
rviz/: urdf.rviz
src/: jointControl.cpp
urdf/: diff_wheeled_robot.xacro  pan_tilt.urdf  pan_tilt.xacro  seven_dof_arm.xacro  seven_dof_arm_with_rgbd.xacro
urdf/sensors/: xtion_pro_live.gazebo.xacro
